apps/strings-app/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  annotations:
    linkerd.io/inject: enabled
  name: strings-app
spec: {}
status: {}
