apps/strings-app/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: strings-app
  name: strings-api
  namespace: strings-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: strings-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: strings-api
    spec:
      containers:
      - image: surenmcode/strings-api:1.0
        name: strings-api
        resources: {}
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: strings-app
  name: strings-cache
  namespace: strings-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strings-cache
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: strings-cache
    spec:
      containers:
      - image: redis:6.0.9
        name: strings-cache
        resources: {}
status: {}
