apps/strings-app/manifests/strings_frontend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: strings-app
  name: strings-frontend
  namespace: strings-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: strings-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: strings-frontend
    spec:
      containers:
      - image: surenmcode/strings-frontend:1.4
        name: strings-frontend
        resources: {}
status: {}
