apps/strings-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strings-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx   
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/add-base-url : "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  namespace: strings-app
spec:
  tls:
  - hosts:
    - aksdemo.contosodev.com
    secretName: tls-secret
  rules:
  - host: aksdemo.contosodev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: strings-frontend
            port:
              number: 80
      - path: /strings-app(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: strings-frontend
            port:
              number: 80
